src/objects/LandGridTract__c.object
<CustomObject>
    <fields>
        <fullName>Abstract__c</fullName>
        <label>Abstract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block__c</fullName>
        <label>Block</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTY_Row_ID__c</fullName>
        <label>CTY Row ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CombinedLegal__c</fullName>
        <label>CombinedLegal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <externalId>true</externalId>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Egnyte_Link__c</fullName>
        <inlineHelpText>link to the title folder in Egnyte</inlineHelpText>
        <label>Egnyte Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GDB_Geomattr_Data__c</fullName>
        <label>GDB Geomattr Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lookup_Key__c</fullName>
        <description>Full Name without surveyor used for bulk loading from LandVantage in the format State:County:Block:Section:Abstract</description>
        <externalId>true</externalId>
        <inlineHelpText>Full Name without surveyor used for bulk loading from LandVantage in the format State:County:Block:Section:Abstract</inlineHelpText>
        <label>Lookup Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parcel_ID__c</fullName>
        <externalId>true</externalId>
        <label>Parcel ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDIR__c</fullName>
        <label>RDIR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Range__c</fullName>
        <label>Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STR_Text__c</fullName>
        <description>Concatenate of Township, TDIR, Range, RDIR</description>
        <label>STR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STR__c</fullName>
        <formula>Section__c&amp;&quot;-&quot;&amp;Text(Township__c)&amp;TDIR__c&amp;&quot;-&quot;&amp;Text(Range__c)&amp;RDIR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STR (Calculated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <externalId>true</externalId>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <label>Survey Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TDIR__c</fullName>
        <label>TDIR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRACTS_CO_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TRACTS.CO Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LandGridTracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRACTS_CO_Last_Completed__c</fullName>
        <label>TRACTS.CO Last Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TRACTS_CO__c</fullName>
        <description>link to Tracts.CO</description>
        <label>TRACTS.CO</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Title_Notes__c</fullName>
        <inlineHelpText>Brief comments and title notes. Full comments should be entered into Tracts.Co</inlineHelpText>
        <label>Title Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Title_Status__c</fullName>
        <label>Title Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Imaging In Progress</fullName>
                </value>
                <value>
                    <fullName>Imaging Complete</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Ready For Review</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete - Acquisition</fullName>
                </value>
                <value>
                    <fullName>Complete - Limited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Township_Range__c</fullName>
        <formula>Text(Township__c) &amp; TDIR__c &amp; &quot;-&quot; &amp; Text(Range__c) &amp; RDIR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Township Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Township__c</fullName>
        <label>Township</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>LandGridTract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>County__c</columns>
        <columns>Block__c</columns>
        <columns>Township_Range__c</columns>
        <columns>Section__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Section__c</field>
            <operation>equals</operation>
            <value>269</value>
        </filters>
        <filters>
            <field>Block__c</field>
            <operation>equals</operation>
            <value>12</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_North_Dakota</fullName>
        <columns>NAME</columns>
        <columns>CombinedLegal__c</columns>
        <columns>State__c</columns>
        <columns>County__c</columns>
        <columns>Block__c</columns>
        <columns>Township_Range__c</columns>
        <columns>Section__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>contains</operation>
            <value>ND</value>
        </filters>
        <label>All - North Dakota</label>
    </listViews>
    <listViews>
        <fullName>All_TX_Martin</fullName>
        <columns>NAME</columns>
        <columns>CombinedLegal__c</columns>
        <columns>State__c</columns>
        <columns>County__c</columns>
        <columns>Block__c</columns>
        <columns>Township_Range__c</columns>
        <columns>Section__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>County__c</field>
            <operation>equals</operation>
            <value>Martin</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>TX</value>
        </filters>
        <filters>
            <field>Section__c</field>
            <operation>equals</operation>
            <value>23</value>
        </filters>
        <label>All - TX-Martin</label>
    </listViews>
    <listViews>
        <fullName>All_TX_Martin_Howard</fullName>
        <columns>NAME</columns>
        <columns>County__c</columns>
        <columns>Block__c</columns>
        <columns>Section__c</columns>
        <columns>Title_Status__c</columns>
        <columns>TRACTS_CO__c</columns>
        <columns>TRACTS_CO_Completed_By__c</columns>
        <columns>TRACTS_CO_Last_Completed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>County__c</field>
            <operation>equals</operation>
            <value>Martin</value>
        </filters>
        <filters>
            <field>Block__c</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All - TX-Martin - Howard</label>
    </listViews>
    <listViews>
        <fullName>All_TX_Martin_Howard_Ford</fullName>
        <booleanFilter>(1 OR (10 OR (2 AND (3 OR 4 OR 5 OR 6 OR 7 OR 8 OR 9))))</booleanFilter>
        <columns>NAME</columns>
        <columns>County__c</columns>
        <columns>Block__c</columns>
        <columns>Section__c</columns>
        <columns>Title_Status__c</columns>
        <columns>TRACTS_CO__c</columns>
        <columns>TRACTS_CO_Completed_By__c</columns>
        <columns>TRACTS_CO_Last_Completed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Block__c</field>
            <operation>equals</operation>
            <value>33 T2N</value>
        </filters>
        <filters>
            <field>Block__c</field>
            <operation>equals</operation>
            <value>35 T1N</value>
        </filters>
        <filters>
            <field>Section__c</field>
            <operation>equals</operation>
            <value>10</value>
        </filters>
        <filters>
            <field>Section__c</field>
            <operation>equals</operation>
            <value>11</value>
        </filters>
        <filters>
            <field>Section__c</field>
            <operation>equals</operation>
            <value>12</value>
        </filters>
        <filters>
            <field>Section__c</field>
            <operation>equals</operation>
            <value>13</value>
        </filters>
        <filters>
            <field>Section__c</field>
            <operation>equals</operation>
            <value>14</value>
        </filters>
        <filters>
            <field>Section__c</field>
            <operation>equals</operation>
            <value>15</value>
        </filters>
        <filters>
            <field>Section__c</field>
            <operation>equals</operation>
            <value>24</value>
        </filters>
        <filters>
            <field>Block__c</field>
            <operation>equals</operation>
            <value>34 T3N</value>
        </filters>
        <label>All - TX-Martin - Howard - Ford</label>
    </listViews>
    <listViews>
        <fullName>All_TX_Martin_Mercury</fullName>
        <columns>NAME</columns>
        <columns>County__c</columns>
        <columns>Block__c</columns>
        <columns>Section__c</columns>
        <columns>Abstract__c</columns>
        <columns>Title_Status__c</columns>
        <columns>TRACTS_CO__c</columns>
        <columns>TRACTS_CO_Completed_By__c</columns>
        <columns>TRACTS_CO_Last_Completed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>TX</value>
        </filters>
        <filters>
            <field>County__c</field>
            <operation>equals</operation>
            <value>Martin</value>
        </filters>
        <filters>
            <field>Block__c</field>
            <operation>equals</operation>
            <value>36 T1N</value>
        </filters>
        <label>All - TX-Martin - Mercury</label>
    </listViews>
    <listViews>
        <fullName>North_Dakota</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Section__c</columns>
        <columns>County__c</columns>
        <columns>Lookup_Key__c</columns>
        <columns>Range__c</columns>
        <columns>Record_Type_Name__c</columns>
        <columns>TDIR__c</columns>
        <columns>Township__c</columns>
        <columns>Township_Range__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>ND</value>
        </filters>
        <label>North Dakota</label>
    </listViews>
    <listViews>
        <fullName>PLSS</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>STR_Text__c</columns>
        <columns>STR__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LandGridTract__c.PLSS_States</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>LA</value>
        </filters>
        <filters>
            <field>County__c</field>
            <operation>equals</operation>
            <value>Red River</value>
        </filters>
        <label>PLSS</label>
    </listViews>
    <listViews>
        <fullName>PLSS_ND</fullName>
        <columns>NAME</columns>
        <columns>STR__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>TRACTS_CO__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LandGridTract__c.PLSS_States</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>ND</value>
        </filters>
        <label>PLSS - ND</label>
    </listViews>
    <listViews>
        <fullName>TLS_Broker_LandGridTract</fullName>
        <filterScope>Queue</filterScope>
        <label>TLS Broker</label>
        <queue>TLS_Broker</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>LandGridTract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LandGridTracts</pluralLabel>
    <recordTypes>
        <fullName>PLSS_States</fullName>
        <active>true</active>
        <label>PLSS States</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tax_Parcel_States</fullName>
        <active>true</active>
        <label>Tax Parcel States</label>
    </recordTypes>
    <recordTypes>
        <fullName>Texas</fullName>
        <active>false</active>
        <label>Texas</label>
    </recordTypes>
    <recordTypes>
        <fullName>Texas_Abstract</fullName>
        <active>true</active>
        <description>Texas LandGridTract - Identified by County and Abstract</description>
        <label>Texas (Abstract)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Texas_Section</fullName>
        <active>true</active>
        <description>Texas LandGridTract - Identified by Section and Block</description>
        <label>Texas (Section)</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>